--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,8 +22,8 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#/results">All Contacts</a></li>
                     <li><a href="#/results/favorites">Favorites</a></li>
-                    <li><a href="#/searches">Searches</a></li>
-                    <li><a href="#/imports">Imports</a></li>
+                    <li><a href="#/search">Searches</a></li>
+                    <li><a href="#/import">Imports</a></li>
                     <li><a href="#/events">Events</a></li>
                     <li><a href="#/tools">Tools</a></li>
                     <li><a href="#/about">About</a></li>
@@ -38,9 +38,9 @@
         <li><div class="divider"></div></li>
         <li><a href="#/results/favorites"><i class="material-icons">star</i> Favorites</a></li>
         <li><div class="divider"></div></li>
-        <li><a href="#/searches"><i class="material-icons">settings</i> Searches</a></li>
-        <li><a href="#/imports"><i class="material-icons">settings</i> Imports</a></li>
-        <li><a href="#/events"><i class="material-icons">settings</i> Events</a></li>
+        <li><a href="#/search"><i class="material-icons">search</i> Search</a></li>
+        <li><a href="#/import"><i class="material-icons">import_export</i> Import</a></li>
+        <li><a href="#/events"><i class="material-icons">event</i> Events</a></li>
         <li><a href="#/tools"><i class="material-icons">settings</i> Tools</a></li>
         <li><a href="#/about"><i class="material-icons">settings</i> About</a></li>
     </ul>
@@ -58,14 +58,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    <script src="js/services/_services.js"></script>
-    <script src="js/services/queryService.js"></script>
+    <script src="services/_services.js"></script>
+    <script src="services/queryService.js"></script>
     <script src="modules/contact/contactController.js"></script>
     <script src="modules/tools/toolsController.js"></script>
     <script src="modules/results/resultsController.js"></script>
 
     <!-- Angular Main Module -->
-    <script src="js/meshApp.js"></script>
+    <script src="meshApp.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function() {
