--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="#/" class="brand-logo">Logo</a>
+                <a href="#/" class="brand-logo">Mesh</a>
                 <a href="#" data-activates="left-menu" class="button-collapse"><i class="material-icons">menu</i></a>
                 <!-- Header Nav Bar -->
                 <ul class="right hide-on-med-and-down">
