--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html ng-app="meshApp">
 <head>
-    <title>Mesh</title>
+    <title>Mesh - MgM</title>
     <!-- Google Icon Font -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- Materialize  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <link rel='icon' type='image/gif' href='pix/mesh.gif'/>
 
     <!-- Optimize for mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
