contact pictures added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- Materialize  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <link rel="stylesheet" href="css/style.css"/>
     <link rel='icon' type='image/gif' href='pix/mesh.gif'/>
 
     <!-- Optimize for mobile -->
