Filter specific fields
Added angular-filter library via CDN
Added error.ejs to clean up log errors

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.14/angular-filter.min.js"></script>
     <script src="services/_services.js"></script>
     <script src="services/queryService.js"></script>
     <script src="modules/contact/contactController.js"></script>
