--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
                 <a href="#" data-activates="left-menu" class="button-collapse"><i class="material-icons">menu</i></a>
                 <!-- Header Nav Bar -->
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#/results">All Contacts</a></li>
+                    <li><a href="#/results">Recent Contacts</a></li>
                     <li><a href="#/results/favorites">Favorites</a></li>
                     <li><a href="#/search">Searches</a></li>
                     <li><a href="#/import">Imports</a></li>
@@ -36,15 +36,14 @@
 
     <!-- Side Bar -->
     <ul class="side-nav" id="left-menu">
-        <li><a href="#/results"><i class="material-icons">people</i> All Contacts</a></li>
+        <li><a href="#/results"><i class="material-icons">people</i>Recent Contacts</a></li>
+        <li><a href="#/results/favorites"><i class="material-icons">star</i>Favorites</a></li>
+        <li><a href="#/search"><i class="material-icons md-18">search</i>Search</a></li>
         <li><div class="divider"></div></li>
-        <li><a href="#/results/favorites"><i class="material-icons">star</i> Favorites</a></li>
-        <li><div class="divider"></div></li>
-        <li><a href="#/search"><i class="material-icons">search</i> Search</a></li>
-        <li><a href="#/import"><i class="material-icons">import_export</i> Import</a></li>
-        <li><a href="#/events"><i class="material-icons">event</i> Events</a></li>
-        <li><a href="#/tools"><i class="material-icons">settings</i> Tools</a></li>
-        <li><a href="#/about"><i class="material-icons">settings</i> About</a></li>
+        <li><a href="#/import"><i class="material-icons">import_export</i>Import</a></li>
+        <li><a href="#/events"><i class="material-icons">event</i>Events</a></li>
+        <li><a href="#/tools"><i class="material-icons">settings</i>Tools</a></li>
+        <li><a href="#/about"><i class="material-icons">info_outline</i>About</a></li>
     </ul>
 
 
