coded Favorites; added tools

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
 
     <!-- Side Bar -->
     <ul class="side-nav" id="left-menu">
-        <li><a href="#/results"><i class="material-icons">people</i>Recent Contacts</a></li>
+        <li><a href="#/results"><i class="material-icons">people</i>Recent</a></li>
         <li><a href="#/results/favorites"><i class="material-icons">star</i>Favorites</a></li>
         <li><a href="#/search"><i class="material-icons md-18">search</i>Search</a></li>
         <li><div class="divider"></div></li>
