--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,10 @@
     <title>Mesh - MgM</title>
     <!-- Google Icon Font -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
-    <!-- Materialize  -->
+    <!-- Materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/core.css"/>
     <link rel='icon' type='image/gif' href='pix/mesh.gif'/>
 
     <!-- Optimize for mobile -->
@@ -15,30 +16,21 @@
 <body>
 <div class="wrapper">
 
-    <div class="navbar-fixed">
+    <header class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
                 <a href="#/" class="brand-logo">Mesh</a>
-                <a href="#" data-activates="left-menu" class="button-collapse"><i class="material-icons">menu</i></a>
-                <!-- Header Nav Bar -->
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#/results">Recent Contacts</a></li>
-                    <li><a href="#/results/favorites">Favorites</a></li>
-                    <li><a href="#/search">Searches</a></li>
-                    <li><a href="#/import">Imports</a></li>
-                    <li><a href="#/events">Events</a></li>
-                    <li><a href="#/tools">Tools</a></li>
-                    <li><a href="#/about">About</a></li>
-                </ul>
+                <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
             </div>
         </nav>
-    </div>
+    </header>
 
     <!-- Side Bar -->
-    <ul class="side-nav" id="left-menu">
+    <ul id="slide-out" class="side-nav fixed">
         <li><a href="#/results"><i class="material-icons">people</i>Recent</a></li>
         <li><a href="#/results/favorites"><i class="material-icons">star</i>Favorites</a></li>
-        <li><a href="#/search"><i class="material-icons md-18">search</i>Search</a></li>
+        <li><div class="divider"></div></li>
+        <li><a href="#/search"><i class="material-icons">search</i>Searches</a></li>
         <li><div class="divider"></div></li>
         <li><a href="#/import"><i class="material-icons">import_export</i>Import</a></li>
         <li><a href="#/events"><i class="material-icons">event</i>Events</a></li>
@@ -49,8 +41,11 @@
 
 
 
+
     <!-- Injected via AngularJS -->
-    <div ng-view></div>
+    <main ng-view></main>
+
+    <footer></footer>
 
 
 
@@ -72,7 +67,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $(".button-collapse").sideNav({
-                closeOnClick: true
+                draggable: true
             });
         });
     </script>
