--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,6 +57,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.14/angular-filter.min.js"></script>
     <script src="services/_services.js"></script>
     <script src="services/queryService.js"></script>
+    <script src="filters/filters.js"></script>
     <script src="modules/contact/contactController.js"></script>
     <script src="modules/tools/toolsController.js"></script>
     <script src="modules/results/resultsController.js"></script>
