--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,6 +143,7 @@
     <script src="modules/contact/contactController.js"></script>
     <script src="modules/tools/toolsController.js"></script>
     <script src="modules/results/resultsController.js"></script>
+    <script src="modules/detail/detailController.js"></script>
 
     <!-- Angular Main Module -->
     <script src="meshApp.js"></script>
