--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,13 +105,7 @@
     </div>
 
     <!-- Main Footer -->
-    <footer class="main-footer">
-        <strong>Copyright &copy; 2016</strong> All rights reserved.
-        <!-- To the right -->
-        <div class="pull-right hidden-xs">
-            Extra
-        </div>
-    </footer>
+    <footer class="main-footer"></footer>
 
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark"></aside>
