Developing LinkedIn Directive

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,6 +133,8 @@
     <script src="services/queryService.js"></script>
     <!-- Angular Filters Module -->
     <script src="filters/filters.js"></script>
+    <!-- Angular Directives Module -->
+    <script src="directives/directives.js"></script>
     <!-- Individual Modules -->
     <script src="modules/contact/contactController.js"></script>
     <script src="modules/tools/toolsController.js"></script>
