--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,16 +52,17 @@
         </nav>
     </header>
     <!-- Left side column. contains the logo and sidebar -->
-    <aside class="main-sidebar">
+    <aside class="main-sidebar" ng-controller="navigationController">
         <section class="sidebar">
 
-            <form action="#" method="get" class="sidebar-form">
+            <form class="sidebar-form">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search...">
+                    <input type="text" class="form-control" placeholder="Search..." ng-model="customSearchCriteria">
                     <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
+                        <button type="submit" name="search" id="search-btn" class="btn btn-flat" onclick="return false;" ng-click="customSearch()">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </span>
                 </div>
             </form>
 
@@ -136,6 +137,7 @@
     <!-- Angular Directives Module -->
     <script src="directives/directives.js"></script>
     <!-- Individual Modules -->
+    <script src="modules/navigation/navigationController.js"></script>
     <script src="modules/contact/contactController.js"></script>
     <script src="modules/tools/toolsController.js"></script>
     <script src="modules/results/resultsController.js"></script>
