--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,6 +92,9 @@
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
+
+        <alert-box></alert-box>
+
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
@@ -131,6 +134,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.14/angular-filter.min.js"></script>
     <!-- Angular Services Module -->
     <script src="services/_services.js"></script>
+    <script src="services/alertService.js"></script>
     <script src="services/queryService.js"></script>
     <!-- Angular Filters Module -->
     <script src="filters/filters.js"></script>
