Alerts Alerts, Get Better Alerts!
Handle errors appropriately in angular controllers.
Styling alerts to be more compact.
Remove nasty SQL error alerting from results page.
Fixing timeout bug and documentation error in alertService.
Upgraded dbQueries deprecated functions.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,7 @@
 
             <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
-                <li class="header">HEADER EXAMPLE {{customSearchError}}</li>
+                <li class="header">HEADER EXAMPLE</li>
                 <li class="active"><a href="#/results"><i class="fa fa-users"></i> <span>Recent</span></a></li>
                 <li><a href="#/results/favorites"><i class="fa fa-star"></i> <span>Favorites</span></a></li>
                 <li><a href="#/imports"><i class="fa fa-download"></i> <span>Import</span></a></li>
