--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,7 +68,7 @@
 
             <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
-                <li class="header">HEADER EXAMPLE</li>
+            <!--    <li class="header">HEADER EXAMPLE</li>  -->
                 <li class="active"><a href="#/results"><i class="fa fa-users"></i> <span>Recent</span></a></li>
                 <li><a href="#/results/favorites"><i class="fa fa-star"></i> <span>Favorites</span></a></li>
                 <li><a href="#/imports"><i class="fa fa-download"></i> <span>Import</span></a></li>
@@ -76,14 +76,14 @@
                 <li><a href="#/tools"><i class="fa fa-cog"></i> <span>Tools</span></a></li>
                 <li><a href="#/about"><i class="fa fa-info"></i> <span>About</span></a></li>
                 <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
+                    <a href="#"><i class="fa fa-link"></i> <span>Views</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="#">Link in level 2</a></li>
-                        <li><a href="#">Link in level 2</a></li>
+                        <li><a href="#">Tag</a></li>
+                        <li><a href="#">Organization</a></li>
                     </ul>
                 </li>
             </ul>
