Expanding Sidebar Links Shouldn't Route
Clicking the treeview ("Views") sidebar link won't redirect the page.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
         <!-- Header Navbar -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
-            <a class="sidebar-toggle" data-toggle="offcanvas" role="button">
+            <a href="" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
             <!-- Navbar Right Menu -->
@@ -45,7 +45,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Control Sidebar Toggle Button -->
                     <li>
-                        <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+                        <a href="" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
                     </li>
                 </ul>
             </div>
@@ -76,7 +76,7 @@
                 <li><a href="#/tools"><i class="fa fa-cog"></i> <span>Tools</span></a></li>
                 <li><a href="#/about"><i class="fa fa-info"></i> <span>About</span></a></li>
                 <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>Views</span>
+                    <a href=""><i class="fa fa-link"></i> <span>Views</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                         </span>
