POST Conversion for Remaining DB Queries

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,7 +110,13 @@
     <footer class="main-footer"></footer>
 
     <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark"></aside>
+    <aside class="control-sidebar control-sidebar-dark">
+
+        <!-- THIS IS YOUR SIDEBAR -->
+        <!-- Hey dad! -->
+        <p>Hey dad</p>
+
+    </aside>
     <!-- Add the sidebar's background.
          Must be placed immediately after the control sidebar. -->
     <div class="control-sidebar-bg"></div>
