--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="/#/" class="logo">
+        <a href="/#/" class="logo" style='xdisplay:none'>
             <span class="logo-mini"><img src="pix/mesh.gif"></span>
             <span class="logo-lg"><b>Mesh</b></span>
         </a>
@@ -39,7 +39,7 @@
             <!-- Sidebar toggle button-->
             <a href="" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
-            </a>
+            </a><div style='font: bold 16pt Arial; color: white; position: absolute;margin: 10px 40%'>Mesh</div>
             <!-- Navbar Right Menu -->
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
