--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,24 +22,24 @@
     <!-- Optimize for mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body class="fixed sidebar-mini skin-blue">
+<body class="fixed skin-blue">
 <div class="wrapper" ng-controller="navigationController">
 
     <!-- Main Header -->
     <header class="main-header">
-
-        <!-- Logo -->
-        <a href="/#/" class="logo" style='xdisplay:none'>
-            <span class="logo-mini"><img src="pix/mesh.gif"></span>
-            <span class="logo-lg"><b>Mesh</b></span>
-        </a>
 
         <!-- Header Navbar -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
             <a href="" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
-            </a><div style='font: bold 16pt Arial; color: white; position: absolute;margin: 10px 40%'>Mesh</div>
+            </a>
+
+            <!-- Main Header Title -->
+            <div style='font: bold 16pt Arial; color: white; position: absolute;margin: 10px 40%'>
+                Mesh
+            </div>
+
             <!-- Navbar Right Menu -->
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
