Closing Sidebar on Small Screens
Sidebar will close upon clicking a link in small and extra small
screens.
Menu header is centered.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
             </a>
 
             <!-- Main Header Title -->
-            <div style='font: bold 16pt Arial; color: white; position: absolute;margin: 10px 40%'>
+            <div class="navbar-header">
                 Mesh
             </div>
 
