--- a/public/css/core.css
+++ b/public/css/core.css
@@ -3,6 +3,17 @@
     display: none;
 }
 
+.navbar .navbar-header {
+    font: bold 16pt Arial;
+    color: white;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    z-index: -1;
+}
+
 /* Alerts */
 div.alert {
     margin: 5px;
