styled detail page; changed picture logic

--- a/public/directives/partials/contactImage.html
+++ b/public/directives/partials/contactImage.html
@@ -1,1 +1,1 @@
-<img ng-src="pix/{{contact.pix}}" class="media-object" onerror="this.src='pix/naPhoto.gif'" alt="Person photo" title='{{contact.cdate | date}} - {{contact.mdate | date}}'/>
+<img ng-src="pix/{{contact.pix}}" class="media-object" onerror="this.src='pix/misPhoto.gif'" alt="Person photo" title='{{contact.cdate | date}} - {{contact.mdate | date}}'/>
