--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,19 @@
     display: inline-block;
 }
 
+.mg-label {
+    line-height: 18px;
+    height: 18px;
+    margin: 0 5px 0 0;
+    padding: 0 6px;
+    border-radius: 8px;
+    display: inline-block;
+    width: 40px;
+    text-align: center;
+    background-color: #88f;
+    color: white;
+}
+
 input.searchError {
     color: red !important;
 }
