Enhance search function
add search types, change filter description, update REST API

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,15 @@
     display: inline-block;
 }
 
+.mg-search-info {
+    line-height: 18px;
+    height: 18px;
+    margin: 0 5px 0 0;
+    padding: 0 6px;
+	background-color: #fff;
+    display: inline-block;
+}
+
 .mg-label {
     line-height: 18px;
     height: 18px;
