--- a/css/core.css
+++ b/css/core.css
@@ -19,12 +19,18 @@ div.alert {
     margin: 5px;
     padding: 2px 25px 2px 5px;
 }
+
 div.alert h4 {
     margin-bottom: 2px;
 }
 
-.media-object {
+.media-pix-thumb {
     width: 48px;
+    border-radius: 10%;
+}
+
+.media-pix-small {
+    width: 96px;
     border-radius: 10%;
 }
 
