--- a/directives/partials/pinfo.htm
+++ b/directives/partials/pinfo.htm
@@ -1,12 +1,12 @@
-<ul class="pinfo-list">
-    <li ng-repeat="detail in details | orderBy: 'type' " ng-switch="detail.type">
-        <div class="mg-label" title='{{detail.mdate | ageFilter}}'>{{detail.type}}</div>
+<ul class='pinfo-list'>
+    <li ng-repeat="detail in details | orderBy: 'type' " ng-switch='detail.type'>
+        <div class='mg-label' title='{{detail.mdate | ageFilter}}'>{{detail.type}}</div>
         <b>
-            <a ng-switch-when="url" ng-href="http://{{detail.info}}" target="_blank" ng-bind="detail.info"></a>
-            <a ng-switch-when="eml" ng-href="mailto:{{detail.info}}" target="_blank" ng-bind="detail.info"></a>
-            <span  ng-switch-when="wed" ng-bind="detail.info | bornFilter"></span >
-            <span ng-switch-default ng-bind="detail.info"></span>
+            <a ng-switch-when='url' ng-href='http://{{detail.info}}' target='_blank' ng-bind='detail.info'></a>
+            <a ng-switch-when='eml' ng-href='mailto:{{detail.info}}' target='_blank' ng-bind='detail.info'></a>
+            <span  ng-switch-when='wed' ng-bind='detail.info | bornFilter'></span >
+            <span ng-switch-default ng-bind='detail.info'></span>
         </b>
-        <i ng-if="detail.areacode" style='display: inline-block; text-overflow: clip'>{{detail.areacode}}</i>
+        <i ng-if='detail.areacode' style='display: inline-block; text-overflow: clip'>{{detail.areacode}}</i>
     </li>
 </ul>
