--- a/directives/partials/pinfo.htm
+++ b/directives/partials/pinfo.htm
@@ -5,7 +5,9 @@
             <a ng-switch-when='url' ng-href='http://{{detail.info}}' target='_blank' ng-bind='detail.info'></a>
             <a ng-switch-when='eml' ng-href='mailto:{{detail.info}}' target='_blank' ng-bind='detail.info'></a>
             <a ng-switch-when='cph' ng-href='tel:{{detail.info}}' target='_blank' ng-bind='detail.info'></a>
-            <span  ng-switch-when='wed' ng-bind='detail.info | bornFilter'></span >
+            <a ng-switch-when='wph' ng-href='tel:{{detail.info}}' target='_blank' ng-bind='detail.info'></a>
+            <a ng-switch-when='hph' ng-href='tel:{{detail.info}}' target='_blank' ng-bind='detail.info'></a>
+            <span ng-switch-when='wed' ng-bind='detail.info | bornFilter'></span >
             <span ng-switch-default ng-bind='detail.info'></span>
         </b>
         <i ng-if='detail.areacode' style='display: inline-block; text-overflow: clip'>{{detail.areacode}}</i>
