changed results references to contacts
addDetail not functioning

--- a/modules/layout/sidebar-menu.htm
+++ b/modules/layout/sidebar-menu.htm
@@ -6,9 +6,9 @@
                         </span>
         </a>
         <ul class='treeview-menu menu-open'>
-            <li><a href='#!/results/recent-adds'><i class="fa fa-users"></i> Recent Adds</a></li>
-            <li class='active'><a href='#!/results/favorites'><i class="fa fa-star"></i> Favorites</a></li>
-            <li><a href='#!/results/recent-mods'><i class="fa fa-users"></i> Recent Mods</a></li>
+            <li><a href='#!/contacts/recent-adds'><i class="fa fa-users"></i> Recent Adds</a></li>
+            <li class='active'><a href='#!/contacts/favorites'><i class="fa fa-star"></i> Favorites</a></li>
+            <li><a href='#!/contacts/recent-mods'><i class="fa fa-users"></i> Recent Mods</a></li>
         </ul>
     </li>
 
