--- a/assets/css/admin-lte.css
+++ b/assets/css/admin-lte.css
@@ -254,6 +254,7 @@ a:focus {
   background-color: transparent;
   background-image: none;
   padding: 15px 15px;
+  font-family: fontAwesome;
 }
 .main-header .sidebar-toggle:before {
   content: "\f0c9";
